--- a/Homework10/TheBrand/assets/styles/style.css
+++ b/Homework10/TheBrand/assets/styles/style.css
@@ -40,7 +40,7 @@
 /*}*/
 .header {
     display: flex;
-    max-width: 1440px;
+    max-width: 100%;
     height: 75px;
     fill: #222;
     background-color: #222222;
@@ -61,7 +61,7 @@
 }
 .menu_list {
     top: 75px;
-
+    right: 0;
     display: none;
     gap: 11px;
     flex-direction: column;
@@ -116,6 +116,8 @@
     display: flex;
     margin: 0 auto;
     height: 764px;
+    align-items: center;
+
 }
 .logo_box {
     display: flex;
@@ -517,13 +519,15 @@
     .header {
         /*display: none;*/
         max-width: 100%;
-        padding-left: 24px;
-        padding-right: 18px;
-
+        padding-left: 32px;
+    }
+    .menu {
+        margin-right: 11px;
     }
     .logo {
         max-width: 100%;
-        justify-content: space-around
+        justify-content: space-around;
+        height: 368px;
         /*display: none;*/
     }
     .logo_h1 {
@@ -586,8 +590,16 @@
     .header {
         /*display: none;*/
         max-width: 1fr;
-        padding-right: 16px;
         padding-left: 16px;
+    }
+    .menu{
+        margin-right: 16px;
+    }
+    .menu_profile {
+        display: none;
+    }
+    .menu_cart {
+        display: none;
     }
     /*-----------------------*/
     .logo {
@@ -643,12 +655,18 @@
         /*display: none;*/
 
     }
+    .feature {
+        flex-direction: column;
+        height: 610px;
+    }
     .photo_subscribe2{
+        max-width: 1fr;
         justify-content: center;
         flex-direction: column;
         gap: 59px;
     }
     .footer {
+        max-width: 1fr;
         height: 143px;
         flex-direction: column-reverse;
         padding-top: 43px;
